--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     </header>
 
     <main>
+        <!-- Баннер -->
         <section class="banner-section">
             <div class="swiper swiper-banner">
                 <div class="swiper-wrapper swiper-banner__wrapper">
@@ -286,34 +287,38 @@
             </div>
         </section>
 
+        <!-- Преимущества -->
         <section class="advantages-section">
             <div class="container">
                 <div class="advantages">
                     <div class="advantages__wrapper">
                         <div class="advantages__item">
-                            <img src="./assets/img/icons/adv-base.svg" alt="" class="advantages__item-icon">
-                            <p class="advantages__item-text">Собственная база<br> спецтехники</p>
+                            <img src="./assets/img/icons/adv-inStock.svg" alt="" class="advantages__item-icon">
+                            <p class="advantages__item-text">Спецтехника<br> 
+                            в наличии</p>
                         </div>
                         <div class="advantages__item">
-                            <img src="./assets/img/icons/adv-year.svg" alt="" class="advantages__item-icon">
-                            <p class="advantages__item-text">Работаем с 1996<br> года</p>
+                            <img src="./assets/img/icons/adv-official.svg" alt="" class="advantages__item-icon">
+                            <p class="advantages__item-text">Официальный<br>
+                            поставщик</p>
                         </div>
                         <div class="advantages__item">
                             <img src="./assets/img/icons/adv-delivery.svg" alt="" class="advantages__item-icon">
-                            <p class="advantages__item-text">Быстрая доставка<br> техники со склада</p>
+                            <p class="advantages__item-text">Быстрая доставка<br> до Заказчика</p>
                         </div>
                         <div class="advantages__item">
                             <img src="./assets/img/icons/adv-lizing.svg" alt="" class="advantages__item-icon">
-                            <p class="advantages__item-text">Покупка спецтехники<br> в лизинг</p>
+                            <p class="advantages__item-text">Выгодная покупка<br> в ЛИЗИНГ</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- Каталог -->
         <section class="main-catalog-section">
             <div class="container">
-                <h2>КАТАЛОГ</h2>
+                <h2 class="second-title second-title--lg">КАТАЛОГ</h2>
                 <div class="container__inner">
                     <div class="main-catalog">
                         <div class="main-catalog__wrapper">
@@ -624,6 +629,192 @@
                                             </div>
                                         </li>
                                     </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- О нас -->
+        <section class="about-section">
+            <div class="about">
+                <div class="container">
+                    <div class="about__top">
+                        <h2 class="about__top-title">О НАС</h2>
+                        <p class="about__top-text">PRO-Техника является одним из крупнейших производителей гусеничных тракторов в России. Основанный в 1930 году, завод ВТГЗ специализируется на производстве сельскохозяйственных и промышленных тракторов ДТ-75, а также их современных аналогов.</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="about__wrapper">
+                        <div class="about__item" style="--pos: 0">
+                            <p class="about__item-name">более 1500</p>
+                            <span class="about__item-subtitle">Единиц спецтехники реализовано</span>
+                            <p class="about__item-text">Это позволяет клиентам выбрать именно ту технику, которая им нужна, и получить все необходимые услуги в одном месте.</p>
+                        </div>
+                        <div class="about__item" style="--pos: 1">
+                            <p class="about__item-name">10 лет</p>
+                            <span class="about__item-subtitle">Работаем на рынке</span>
+                            <p class="about__item-text">Наша компания заслужила репутацию надежного партнера для клиентов из различных секторов. </p>
+                        </div>
+                        <div class="about__item" style="--pos: 2">
+                            <p class="about__item-name">Широкий</p>
+                            <span class="about__item-subtitle">Выбор спецтехники</span>
+                            <p class="about__item-text">Компания предлагает широкий выбор спецтехники от ведущих производителей.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__bottom">
+                    <div class="container">
+                        <img src="./assets/img/photo/about.png" class="about__bottom-img" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Форма консультация -->
+        <section class="consult-section">
+            <div class="container">
+                <div class="consult">
+                    <div class="consult__top">
+                        <h2 class="consult__top-title">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</h2>
+                    </div>
+                    <div class="consult__wrapper">
+                        <div class="consult__left">
+                            <p class="consult__left-text">Заполните форму и наш<br> специалист свяжется с вами</p>
+                            <form action="" class="form consult-form">
+                                <div class="consult-form__wrapper">
+                                    <input type="text" class="input consult-form__input" name="name" placeholder="Ваше имя">
+                                    <input type="tel" class="input consult-form__input" name="phone" placeholder="Номер телефона">
+                                </div>
+                                <div class="consult-form__bottom">
+                                    <button class="consult-form__btn">
+                                        <div class="consult-form__btn-icon">
+                                            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M14.5163 10.8174C14.5189 11.3536 14.0863 11.7862 13.5501 11.7836C13.0139 11.781 12.5771 11.3443 12.5746 10.8081L12.5398 3.54093L1.89131 14.1894C1.51398 14.5668 0.89926 14.5638 0.5183 14.1829C0.137341 13.8019 0.134401 13.1872 0.511731 12.8098L11.1602 2.16136L3.89305 2.12658C3.35686 2.12402 2.92011 1.68727 2.91754 1.15108C2.91498 0.614884 3.34757 0.182294 3.88376 0.18486L13.4948 0.230847C14.031 0.233412 14.4677 0.67016 14.4703 1.20635L14.5163 10.8174Z" />
+                                            </svg>
+                                        </div>
+                                        <span class="consult-form__btn-text">Отправить</span>
+                                    </button>
+                                    <span class="consult-form__confirm">
+                                        Нажимая на кнопку “Отправить”, вы соглашаетесь на обработку персональных данных
+                                    </span>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="consult__img">
+                            <img src="./assets/img/photo/consult.png" alt="" class="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Лизинг -->
+        <section class="leasing-section">
+            <div class="container">
+                <div class="leasing">
+                    <div class="leasing__top">
+                        <p class="leasing__top-title">
+                            СПЕЦТЕХНИКА<br>
+                            <span>В ЛИЗИНГ</span> 
+                            <span>Выгодные программы от ведущих лизинговых компаний России</span>
+                        </p>
+                    </div>
+                    <div class="leasing__bottom">
+                        <p class="leasing__bottom-text">Вы выбираете техику и подаете заявку, мы рассмотрим и одобрим ее в течении 2 часов. Документы в бонк мы подадим сами.<br>
+                        Вы приедите на подписание и оплату </p>
+                        <button class="leasing__bottom-btn">Отправить заявку</button>
+                    </div>
+                </div>
+            </div>
+            <div class="leasing-banks">
+                <div class="container">
+                    <div class="leasing-banks__wrapper">
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/alfa.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/vtb.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/reso.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/europlan.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/baltiyskiy.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                        <div class="leasing-banks__item">
+                            <img src="./assets/img/leasing/sber.png" class="leasing-banks__item-img" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Лидеры продаж -->
+        <section class="leaders-section">
+            <div class="container">
+                <div class="swiper swiper-products">
+                    <div class="swiper-products__top">
+                        <p class="swiper-products__top-title">ЛИДЕРЫ ПРОДАЖ</p>
+                        <div class="swiper-products__top-right">
+                            <div class="swiper-counter"></div>
+
+                            <div class="swiper-groups">
+                                <div class="swiper-groups__btn swiper-groups-prev">
+                                    <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M6.62216 14.1727C6.96519 14.519 7.52135 14.519 7.86438 14.1727C8.20741 13.8264 8.20741 13.2649 7.86438 12.9185L3.21522 8.22467L16.9054 8.22468C17.3905 8.22468 17.7838 7.82763 17.7838 7.33785C17.7838 6.84807 17.3905 6.45103 16.9054 6.45103L3.21522 6.45103L7.86438 1.75716C8.20741 1.41083 8.20741 0.849327 7.86438 0.503001C7.52135 0.156674 6.96519 0.156674 6.62216 0.503001L0.473516 6.71077C0.130489 7.0571 0.130489 7.6186 0.473516 7.96493L6.62216 14.1727Z" />
+                                    </svg>
+                                </div>
+                                <div class="swiper-groups__btn swiper-groups-next">
+                                    <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M11.3778 14.1727C11.0348 14.519 10.4786 14.519 10.1356 14.1727C9.79259 13.8264 9.79259 13.2649 10.1356 12.9185L14.7848 8.22467L1.09456 8.22468C0.60945 8.22468 0.216187 7.82763 0.216187 7.33785C0.216187 6.84807 0.60945 6.45103 1.09456 6.45103L14.7848 6.45103L10.1356 1.75716C9.79259 1.41083 9.79259 0.849327 10.1356 0.503001C10.4786 0.156674 11.0348 0.156674 11.3778 0.503001L17.5265 6.71077C17.8695 7.0571 17.8695 7.6186 17.5265 7.96493L11.3778 14.1727Z" />
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-wrapper swiper-products__wrapper">
+                        <div class="swiper-slide swiper-products__slide">
+                            <div class="products-card">
+                                <div class="products-card__top">
+                                    <img src="./assets/img/products/card-1.png" class="products-card__top-img" alt="">
+                                    <div class="properties-card">
+                                        <ul class="properties-card__list">
+                                            <li class="properties-card__item">
+                                                <span class="properties-card__item-title">Номинальная грузоподъемность</span>
+                                                <span class="properties-card__item-value">1 800 кг</span>
+                                            </li>
+                                            <li class="properties-card__item">
+                                                <span class="properties-card__item-title">Высота выгрузки (по шарниру)</span>
+                                                <span class="properties-card__item-value">3 200 мм</span>
+                                            </li>
+                                            <li class="properties-card__item">
+                                                <span class="properties-card__item-title">Тип органов управления:</span>
+                                                <span class="properties-card__item-value">Джойстик</span>
+                                            </li>
+                                            <li class="properties-card__item">
+                                                <span class="properties-card__item-title">Стандартный объем ковша:</span>
+                                                <span class="properties-card__item-value">0,9 мᶟ</span>
+                                            </li>
+                                            <li class="properties-card__item">
+                                                <span class="properties-card__item-title">Номинальная грузоподъемность</span>
+                                                <span class="properties-card__item-value">1 800 кг</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="products-card__info">
+                                    <p class="products-card__info-title">LGCE LG918</p>
+                                    <p class="products-card__info-desc">Погрузчик фронтальный одноковшовый</p>
+                                    <div class="products-card__info-price-block">
+                                        <p class="products-card__info-price-block__price">2 770 000 ₽</p>
+                                        <button class="products-card__info-price-block__btn">Заказать</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
