update responsive screens

--- a/index.html
+++ b/index.html
@@ -698,52 +698,17 @@
             </div>
         </section>
 
-        <!-- О нас -->
-        <!-- <section class="about-section">
-            <div class="about">
-                <div class="container">
-                    <div class="about__top">
-                        <h2 class="about__top-title">О НАС</h2>
-                        <p class="about__top-text">PRO-Техника является одним из крупнейших производителей гусеничных тракторов в России. Основанный в 1930 году, завод ВТГЗ специализируется на производстве сельскохозяйственных и промышленных тракторов ДТ-75, а также их современных аналогов.</p>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="about__wrapper">
-                        <div class="about__item" style="--pos: 0">
-                            <p class="about__item-name">более 1500</p>
-                            <span class="about__item-subtitle">Единиц спецтехники реализовано</span>
-                            <p class="about__item-text">Это позволяет клиентам выбрать именно ту технику, которая им нужна, и получить все необходимые услуги в одном месте.</p>
-                        </div>
-                        <div class="about__item" style="--pos: 1">
-                            <p class="about__item-name">10 лет</p>
-                            <span class="about__item-subtitle">Работаем на рынке</span>
-                            <p class="about__item-text">Наша компания заслужила репутацию надежного партнера для клиентов из различных секторов. </p>
-                        </div>
-                        <div class="about__item" style="--pos: 2">
-                            <p class="about__item-name">Широкий</p>
-                            <span class="about__item-subtitle">Выбор спецтехники</span>
-                            <p class="about__item-text">Компания предлагает широкий выбор спецтехники от ведущих производителей.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="about__bottom">
-                    <div class="container">
-                        <img src="./assets/img/photo/about.png" class="about__bottom-img" alt="">
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
         <!-- Форма консультация -->
-        <!-- <section class="consult-section">
+        <section class="consult-section">
             <div class="container">
                 <div class="consult">
                     <div class="consult__top">
                         <h2 class="consult__top-title">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</h2>
+                        <p class="consult__top-text">Заполните форму и наш<br> специалист свяжется с вами</p>
                     </div>
                     <div class="consult__wrapper">
                         <div class="consult__left">
-                            <p class="consult__left-text">Заполните форму и наш<br> специалист свяжется с вами</p>
+                            <img src="./assets/img/photo/consult.png" alt="" class="consult__left-img">
                             <form action="" class="form consult-form">
                                 <div class="consult-form__wrapper">
                                     <input type="text" class="input consult-form__input" name="name" placeholder="Ваше имя">
@@ -770,7 +735,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- Лизинг -->
         <section class="leasing-section">
@@ -817,8 +782,44 @@
             <button class="leasing__btn leasing__btn--mobile">Отправить заявку</button>
         </section>
 
+        <!-- О нас -->
+        <section class="about-section">
+            <div class="about">
+                <div class="container">
+                    <div class="about__top">
+                        <h2 class="about__top-title">О НАС</h2>
+                        <p class="about__top-text">PRO-Техника является одним из крупнейших производителей гусеничных тракторов в России. Основанный в 1930 году, завод ВТГЗ специализируется на производстве сельскохозяйственных и промышленных тракторов ДТ-75, а также их современных аналогов.</p>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="about__wrapper">
+                        <div class="about__item" style="--pos: 0">
+                            <p class="about__item-name">более 1500</p>
+                            <span class="about__item-subtitle">Единиц спецтехники реализовано</span>
+                            <p class="about__item-text">Это позволяет клиентам выбрать именно ту технику, которая им нужна, и получить все необходимые услуги в одном месте.</p>
+                        </div>
+                        <div class="about__item" style="--pos: 1">
+                            <p class="about__item-name">10 лет</p>
+                            <span class="about__item-subtitle">Работаем на рынке</span>
+                            <p class="about__item-text">Наша компания заслужила репутацию надежного партнера для клиентов из различных секторов. </p>
+                        </div>
+                        <div class="about__item" style="--pos: 2">
+                            <p class="about__item-name">Широкий</p>
+                            <span class="about__item-subtitle">Выбор спецтехники</span>
+                            <p class="about__item-text">Компания предлагает широкий выбор спецтехники от ведущих производителей.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about__bottom">
+                    <div class="container">
+                        <img src="./assets/img/photo/about.png" class="about__bottom-img" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Лидеры продаж -->
-        <!-- <section class="leaders-section">
+        <section class="leaders-section">
             <div class="container">
                 <div class="swiper swiper-products">
                     <div class="swiper-products__top">
@@ -1069,10 +1070,10 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__top">
@@ -1187,7 +1188,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <ul class="social-list">
+                        <ul class="social-list social-list--desktop">
                             <li class="social-list__item">
                                 <a href="">
                                     <svg width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1237,7 +1238,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="./assets/libs/jquery.min.js"></script>
     <script src="./assets/libs/swiper-bundle.min.js"></script>
