--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./assets/libs/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/libs/simplebar.css">
+    <link rel="stylesheet" href="./assets/libs/jquery.fancybox.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -1240,9 +1241,104 @@
         </div>
     </footer>
 
+    <div class="modal fast-fiew-modal">
+        <div class="modal__body fast-fiew-modal__body">
+            <div class="modal__wrapper fast-fiew-modal__wrapper">
+                <button class="close-modal">
+                    <img src="../assets/img/icons/close.svg" alt="">
+                </button>
+                <div class="modal__info">
+                    <div class="fast-view-block">
+                        <p class="fast-view-block__name">
+                            Погрузчик фронтальный одноковшовый <span>LGCE LG918</span>
+                        </p>
+                        <div class="fast-view-block__wrapper">
+                            <div class="fast-view-block__slider">
+                                <div class="swiper swiper-fast-view">
+                                    <div class="swiper-wrapper swiper-fast-view__wrapper">
+                                        <div class="swiper-slide swiper-fast-view__slide">
+                                            <a href="./assets/img/photo/fast-view.png" data-fancybox="fast-view" class="swiper-fast-view__slide-link">
+                                                <img src="./assets/img/photo/fast-view.png" class="swiper-fast-view__slide-img" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide swiper-fast-view__slide">
+                                            <a href="./assets/img/products/card-1.png" data-fancybox="fast-view" class="swiper-fast-view__slide-link">
+                                                <img src="./assets/img/products/card-1.png" class="swiper-fast-view__slide-img" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide swiper-fast-view__slide">
+                                            <a href="./assets/img/products/card-3.png" data-fancybox="fast-view" class="swiper-fast-view__slide-link">
+                                                <img src="./assets/img/products/card-3.png" class="swiper-fast-view__slide-img" alt="">
+                                            </a>
+                                        </div>
+                                    </div>
+       
+                                    <div class="swiper-pagination swiper-fast-view__pagination"></div>
+                                  
+                                    <div class="swiper-fast-view__btn swiper-fast-view__btn--prev">
+                                        <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M-4.77351e-05 9.015L9.01495 18.03L11.1375 15.9105L4.23745 9.015L11.1375 2.121L9.01645 0L-4.77351e-05 9.015Z" />
+                                        </svg>
+                                    </div>
+                                    <div class="swiper-fast-view__btn swiper-fast-view__btn--next">
+                                        <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M11.1375 9.01527L2.1225 0.000275258L0 2.11978L6.9 9.01527L0 15.9093L2.121 18.0303L11.1375 9.01527Z" />
+                                        </svg>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="fast-view-block__info">
+                                <ul class="fast-view-hits">
+                                    <li class="fast-view-hits__item">В наличии</li>
+                                    <li class="fast-view-hits__item">Новая</li>
+                                </ul>
+                                <div class="fast-view-properties">
+                                    <p class="fast-view-properties__title">Основная характеристика</p>
+                                    <ul class="fast-view-properties__list">
+                                        <li class="fast-view-properties__item">
+                                            <span class="fast-view-properties__item-name">Номинальная грузоподъемность:</span>
+                                            <span class="fast-view-properties__item-value">1 800 кг</span>
+                                        </li>
+                                        <li class="fast-view-properties__item">
+                                            <span class="fast-view-properties__item-name">Высота выгрузки (по шарниру):</span>
+                                            <span class="fast-view-properties__item-value">3 200 мм</span>
+                                        </li>
+                                        <li class="fast-view-properties__item">
+                                            <span class="fast-view-properties__item-name">Тип органов управления:</span>
+                                            <span class="fast-view-properties__item-value">Джойстик</span>
+                                        </li>
+                                        <li class="fast-view-properties__item">
+                                            <span class="fast-view-properties__item-name">Стандартный объем ковша:</span>
+                                            <span class="fast-view-properties__item-value">0,9 мᶟ</span>
+                                        </li>
+                                        <li class="fast-view-properties__item">
+                                            <span class="fast-view-properties__item-name">Давление в системе:</span>
+                                            <span class="fast-view-properties__item-value">17,5 МПа</span>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="fast-view-btns-group">
+                                    <button class="fast-view-btns-group__btn fast-view-btns-group__btn--send">Отправить заявку</button>
+                                    <button class="fast-view-btns-group__btn fast-view-btns-group__btn--buy">Купить в лизинг</button>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="" class="fast-view-block__link">
+                            Перейти в карточку
+                            <svg width="26" height="21" viewBox="0 0 26 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M16.5192 20.6156C16.0116 21.1281 15.1884 21.1281 14.6808 20.6156C14.1731 20.103 14.1731 19.272 14.6808 18.7594L21.5615 11.8125L1.3 11.8125C0.582031 11.8125 0 11.2249 0 10.5C0 9.77513 0.58203 9.1875 1.3 9.1875L21.5615 9.1875L14.6808 2.24058C14.1731 1.72802 14.1731 0.896986 14.6808 0.384423C15.1884 -0.128141 16.0116 -0.128141 16.5192 0.384423L25.6192 9.57192C26.1269 10.0845 26.1269 10.9155 25.6192 11.4281L16.5192 20.6156Z" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="./assets/libs/jquery.min.js"></script>
     <script src="./assets/libs/swiper-bundle.min.js"></script>
     <script src="./assets/libs/simplebar.min.js"></script>
+    <script src="./assets/libs/jquery.fancybox.min.js"></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/swiper.js"></script>
 </body>
