--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <nav class="menu">
                         <ul class="menu-nav">
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link menu-nav__link--active">Каталог</a>
+                                <a href="./pages/catalog.html" class="menu-nav__link">Каталог</a>
                             </li>
                             <li class="menu-nav__item">
                                 <a href="" class="menu-nav__link">Бренды</a>
@@ -322,27 +322,29 @@
                                         </a>
                                     </div>
                                     <div class="banner__brands" data-swiper-parallax="-300">
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
-                                        </a>
+                                        <div class="banner__brands-wrapper">
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="banner__name">
                                         <p class="banner__name-title" data-swiper-parallax="-500">ФРОНТАЛЬНЫЕ ПОГРУЗЧИКИ</p>
@@ -390,27 +392,29 @@
                                         </a>
                                     </div>
                                     <div class="banner__brands" data-swiper-parallax="-300">
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
-                                        </a>
+                                        <div class="banner__brands-wrapper">
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="banner__name">
                                         <p class="banner__name-title" data-swiper-parallax="-500">ВИЛОЧНЫЕ ПОГРУЗЧИКИ</p>
@@ -458,27 +462,29 @@
                                         </a>
                                     </div>
                                     <div class="banner__brands" data-swiper-parallax="-300">
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
-                                        </a>
-                                        <a href="" class="banner__brands-item">
-                                            <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
-                                        </a>
+                                        <div class="banner__brands-wrapper">
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/rigor.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bobcat.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/bomag.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/earthforce.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/mitsubishi.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/ed.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                            <a href="" class="banner__brands-item">
+                                                <img src="./assets/img/brand/disd.svg" class="banner__brands-icon" alt="">
+                                            </a>
+                                        </div>
                                     </div>
                                     <div class="banner__name">
                                         <p class="banner__name-title" data-swiper-parallax="-500">КРАНЫ-МАНИПУЛЯТОРЫ</p>
@@ -558,7 +564,7 @@
                                 </div>
                                 <div class="main-catalog-card__description">
                                     <div class="main-catalog-card__description-top">
-                                        <a href="" class="main-catalog-card__description-name">Фронтальные погрузчики</a>
+                                        <a href="./pages/detail-card.html" class="main-catalog-card__description-name">Фронтальные погрузчики</a>
                                     </div>
                                     <ul class="properties-list">
                                         <li class="properties-list__item">
@@ -624,7 +630,7 @@
                                 </div>
                                 <div class="main-catalog-card__description">
                                     <div class="main-catalog-card__description-top">
-                                        <a href="" class="main-catalog-card__description-name">Автокраны</a>
+                                        <a href="./pages/detail-card.html" class="main-catalog-card__description-name">Автокраны</a>
                                     </div>
                                     <ul class="properties-list">
                                         <li class="properties-list__item">
@@ -705,7 +711,7 @@
                                 </div>
                                 <div class="main-catalog-card__description">
                                     <div class="main-catalog-card__description-top">
-                                        <a href="" class="main-catalog-card__description-name">Эскаваторы</a>
+                                        <a href="./pages/detail-card.html" class="main-catalog-card__description-name">Эскаваторы</a>
                                     </div>
                                     <ul class="properties-list">
                                         <li class="properties-list__item">
@@ -786,7 +792,7 @@
                                 </div>
                                 <div class="main-catalog-card__description">
                                     <div class="main-catalog-card__description-top">
-                                        <a href="" class="main-catalog-card__description-name">Автоцистерны</a>
+                                        <a href="./pages/detail-card.html" class="main-catalog-card__description-name">Автоцистерны</a>
                                     </div>
                                     <ul class="properties-list">
                                         <li class="properties-list__item">
@@ -1259,7 +1265,7 @@
                         </div>
                         <ul class="footer-menu">
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">Каталог</a>
+                                <a href="./pages/catalog.html" class="footer-menu__link">Каталог</a>
                             </li>
                             <li class="footer-menu__item">
                                 <a href="" class="footer-menu__link">Бренды</a>
