--- a/pages/detail-card.html
+++ b/pages/detail-card.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>Фронтальный погрузчик</title>
 
     <link rel="stylesheet" href="../assets/libs/swiper-bundle.min.css">
     <link rel="stylesheet" href="../assets/libs/simplebar.css">
@@ -22,7 +22,7 @@
                     <nav class="menu">
                         <ul class="menu-nav">
                             <li class="menu-nav__item">
-                                <a href="" class="menu-nav__link menu-nav__link--active">Каталог</a>
+                                <a href="./catalog.html" class="menu-nav__link">Каталог</a>
                             </li>
                             <li class="menu-nav__item">
                                 <a href="" class="menu-nav__link">Бренды</a>
@@ -288,6 +288,9 @@
                     </li>
                     <li class="breadcrumb__item">
                         <span class="breadcrumb__item-link">Каталог</span>
+                    </li>
+                    <li class="breadcrumb__item">
+                        <span class="breadcrumb__item-link breadcrumb__item-link--active">Фронтальный погрузчик</span>
                     </li>
                 </ul>
             </div>
@@ -963,7 +966,7 @@
                         </div>
                         <ul class="footer-menu">
                             <li class="footer-menu__item">
-                                <a href="" class="footer-menu__link">Каталог</a>
+                                <a href="./catalog.html" class="footer-menu__link">Каталог</a>
                             </li>
                             <li class="footer-menu__item">
                                 <a href="" class="footer-menu__link">Бренды</a>
