add new elements

--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -424,37 +424,124 @@
                     <div class="catalog__wrapper">
                         <div class="catalog__top">
                             <div class="catalog__header">
-
+                                <ul class="catalog-params">
+                                    <li class="catalog-params__item">
+                                        <p class="catalog-params__item-name">Тип:</p>
+                                        <ul class="params-list">
+                                            <li class="params-list__item params-list__item--active">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                            <li class="params-list__item">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="catalog-params__item">
+                                        <p class="catalog-params__item-name">Назначение:</p>
+                                        <ul class="params-list">
+                                            <li class="params-list__item params-list__item--active">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                            <li class="params-list__item">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="catalog-params__item">
+                                        <p class="catalog-params__item-name">Бренд:</p>
+                                        <ul class="params-list">
+                                            <li class="params-list__item params-list__item--active">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                            <li class="params-list__item">
+                                                <a href="" class="params-list__item-link">Akkord</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </div>
-                            <ul class="filter-apply">
-                                <li class="filter-apply__item">
-                                    <span class="filter-apply__name">Камень</span>
-                                    <svg width="10" height="10" class="filter-apply__btn" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.00004 5.94269L8.77138 9.71402C8.89711 9.83546 9.06551 9.90265 9.24031 9.90113C9.41511 9.89962 9.58232 9.8295 9.70592 9.7059C9.82953 9.58229 9.89964 9.41508 9.90116 9.24029C9.90268 9.06549 9.83548 8.89709 9.71404 8.77135L5.94271 5.00002L9.71404 1.22868C9.83548 1.10295 9.90268 0.934549 9.90116 0.759751C9.89964 0.584953 9.82953 0.417745 9.70592 0.294139C9.58232 0.170534 9.41511 0.100421 9.24031 0.0989022C9.06551 0.0973832 8.89711 0.164579 8.77138 0.286018L5.00004 4.05735L1.22871 0.286018C1.10241 0.167581 0.934987 0.102928 0.761865 0.10574C0.588743 0.108551 0.423506 0.178606 0.301118 0.301081C0.17873 0.423556 0.108791 0.588842 0.106103 0.761966C0.103414 0.93509 0.168185 1.10247 0.286711 1.22868L4.05738 5.00002L0.286045 8.77135C0.222371 8.83285 0.171583 8.90641 0.136644 8.98775C0.101705 9.06909 0.0833139 9.15657 0.0825447 9.24508C0.0817755 9.3336 0.0986432 9.42139 0.132164 9.50332C0.165684 9.58525 0.215186 9.65969 0.277782 9.72228C0.340377 9.78488 0.414811 9.83438 0.496742 9.8679C0.578673 9.90142 0.666459 9.91829 0.754979 9.91752C0.843498 9.91675 0.930979 9.89836 1.01231 9.86342C1.09365 9.82848 1.16721 9.77769 1.22871 9.71402L5.00004 5.94269Z" />
-                                    </svg>
-                                </li>
-                                <li class="filter-apply__item">
-                                    <span class="filter-apply__name">Сверхплотный ПВХ</span>
-                                    <svg width="10" height="10" class="filter-apply__btn" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.00004 5.94269L8.77138 9.71402C8.89711 9.83546 9.06551 9.90265 9.24031 9.90113C9.41511 9.89962 9.58232 9.8295 9.70592 9.7059C9.82953 9.58229 9.89964 9.41508 9.90116 9.24029C9.90268 9.06549 9.83548 8.89709 9.71404 8.77135L5.94271 5.00002L9.71404 1.22868C9.83548 1.10295 9.90268 0.934549 9.90116 0.759751C9.89964 0.584953 9.82953 0.417745 9.70592 0.294139C9.58232 0.170534 9.41511 0.100421 9.24031 0.0989022C9.06551 0.0973832 8.89711 0.164579 8.77138 0.286018L5.00004 4.05735L1.22871 0.286018C1.10241 0.167581 0.934987 0.102928 0.761865 0.10574C0.588743 0.108551 0.423506 0.178606 0.301118 0.301081C0.17873 0.423556 0.108791 0.588842 0.106103 0.761966C0.103414 0.93509 0.168185 1.10247 0.286711 1.22868L4.05738 5.00002L0.286045 8.77135C0.222371 8.83285 0.171583 8.90641 0.136644 8.98775C0.101705 9.06909 0.0833139 9.15657 0.0825447 9.24508C0.0817755 9.3336 0.0986432 9.42139 0.132164 9.50332C0.165684 9.58525 0.215186 9.65969 0.277782 9.72228C0.340377 9.78488 0.414811 9.83438 0.496742 9.8679C0.578673 9.90142 0.666459 9.91829 0.754979 9.91752C0.843498 9.91675 0.930979 9.89836 1.01231 9.86342C1.09365 9.82848 1.16721 9.77769 1.22871 9.71402L5.00004 5.94269Z" />
-                                    </svg>
-                                </li>
-                            </ul>
+                            <div class="filter-panel">
+                                <select name="" class="filter-panel__sort">
+                                    <option value="По популярности">По популярности</option>
+                                    <option value=""></option>
+                                </select>
+
+                                <div class="filter-panel__view">
+                                    <a href="" class="filter-panel__view-link">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3 20C1.34315 20 0 18.6569 0 17V3C0 1.34315 1.34315 0 3 0H17C18.6569 0 20 1.34315 20 3V17C20 18.6569 18.6569 20 17 20H3ZM6 11H2V17C2 17.5523 2.44772 18 3 18H6V11ZM12 11H8V18H12V11ZM18 11H14V18H17C17.5523 18 18 17.5523 18 17V11ZM6 2H3C2.44772 2 2 2.44772 2 3V9H6V2ZM12 2H8V9H12V2ZM17 2H14V9H18V3C18 2.44772 17.5523 2 17 2Z" fill="#FF6F00" />
+                                        </svg>
+                                    </a>
+                                    <a href="" class="filter-panel__view-link">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M20 17C20 18.6569 18.6569 20 17 20L3 20C1.34315 20 0 18.6569 0 17L0 3C0 1.34315 1.34315 0 3 0L17 0C18.6569 0 20 1.34315 20 3L20 17ZM2 14L2 17C2 17.5523 2.44772 18 3 18L17 18C17.5523 18 18 17.5523 18 17V14L2 14ZM2 8L2 12L18 12V8L2 8ZM2 3L2 6L18 6L18 3C18 2.44772 17.5523 2 17 2L3 2C2.44772 2 2 2.44772 2 3Z" fill="#9A9A98" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                         <div class="catalog__inner">
                             <div class="catalog-list">
-                                
+                                <div class="catalog-list__wrapper catalog-list__wrapper--col">
+                                    <div class="catalog-list__item">
+                                        <div class="products-card">
+                                            <div class="products-card__top">
+                                                <img src="../assets/img/products/card-2.png" class="products-card__top-img" alt="">
+                                                <div class="properties-card">
+                                                    <ul class="properties-card__list">
+                                                        <li class="properties-card__item">
+                                                            <span class="properties-card__item-title">Номинальная грузоподъемность</span>
+                                                            <span class="properties-card__item-value">1 800 кг</span>
+                                                        </li>
+                                                        <li class="properties-card__item">
+                                                            <span class="properties-card__item-title">Высота выгрузки (по шарниру)</span>
+                                                            <span class="properties-card__item-value">3 200 мм</span>
+                                                        </li>
+                                                        <li class="properties-card__item">
+                                                            <span class="properties-card__item-title">Тип органов управления:</span>
+                                                            <span class="properties-card__item-value">Джойстик</span>
+                                                        </li>
+                                                        <li class="properties-card__item">
+                                                            <span class="properties-card__item-title">Стандартный объем ковша:</span>
+                                                            <span class="properties-card__item-value">0,9 мᶟ</span>
+                                                        </li>
+                                                        <li class="properties-card__item">
+                                                            <span class="properties-card__item-title">Номинальная грузоподъемность</span>
+                                                            <span class="properties-card__item-value">1 800 кг</span>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="products-card__info">
+                                                <a href="./detail-card.html" class="products-card__info-title">LGCE LG918</a>
+                                                <p class="products-card__info-desc">Погрузчик фронтальный одноковшовый</p>
+                                                <div class="products-card__info-price-block">
+                                                    <p class="products-card__info-price-block__price">2 770 000 ₽</p>
+                                                    <button class="products-card__info-price-block__btn">Заказать</button>
+                                                    <button class="fast-view-btn" title="Быстрый просмотр">
+                                                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M13.9999 19.0516C11.2116 19.0516 8.94824 16.7882 8.94824 13.9999C8.94824 11.2116 11.2116 8.94824 13.9999 8.94824C16.7882 8.94824 19.0516 11.2116 19.0516 13.9999C19.0516 16.7882 16.7882 19.0516 13.9999 19.0516ZM13.9999 10.6982C12.1799 10.6982 10.6982 12.1799 10.6982 13.9999C10.6982 15.8199 12.1799 17.3016 13.9999 17.3016C15.8199 17.3016 17.3016 15.8199 17.3016 13.9999C17.3016 12.1799 15.8199 10.6982 13.9999 10.6982Z" />
+                                                            <path d="M13.9998 24.5232C9.6131 24.5232 5.47143 21.9566 2.62477 17.4999C1.3881 15.5749 1.3881 12.4366 2.62477 10.4999C5.4831 6.04323 9.62477 3.47656 13.9998 3.47656C18.3748 3.47656 22.5164 6.04323 25.3631 10.4999C26.5998 12.4249 26.5998 15.5632 25.3631 17.4999C22.5164 21.9566 18.3748 24.5232 13.9998 24.5232ZM13.9998 5.22656C10.2314 5.22656 6.62643 7.4899 4.10643 11.4449C3.23143 12.8099 3.23143 15.1899 4.10643 16.5549C6.62643 20.5099 10.2314 22.7732 13.9998 22.7732C17.7681 22.7732 21.3731 20.5099 23.8931 16.5549C24.7681 15.1899 24.7681 12.8099 23.8931 11.4449C21.3731 7.4899 17.7681 5.22656 13.9998 5.22656Z" />
+                                                        </svg>
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="catalog__bottom">
                                 <div class="pagination">
                                     <ul class="pagination-list">
                                         <li class="pagination-list__item">
-                                            <a href="#" class="pagination-list__link pagination-list__link--prev">
-                                                <img src="../assets/img/icons/arrow-left.svg" alt="">
+                                            <a href="#" class="pagination-list__prev disabled">
+                                                <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M0.000196167 9.01527L9.0152 0.000275733L11.1377 2.11977L4.2377 9.01527L11.1377 15.9093L9.0167 18.0303L0.000196167 9.01527Z" />
+                                                </svg>
                                             </a>
                                         </li>
                                         <li class="pagination-list__item">
-                                            <a href="#" class="pagination-list__link">1</a>
+                                            <a href="#" class="pagination-list__link pagination-list__link--active">1</a>
                                         </li>
                                         <li class="pagination-list__item">
                                             <a href="#" class="pagination-list__link">2</a>
@@ -463,8 +550,10 @@
                                             <a href="#" class="pagination-list__link">3</a>
                                         </li>
                                         <li class="pagination-list__item">
-                                            <a href="#" class="pagination-list__link pagination-list__link--next">
-                                                <img src="../assets/img/icons/arrow-right.svg" alt="">
+                                            <a href="#" class="pagination-list__next">
+                                                <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M11.1375 9.01527L2.1225 0.000275733L0 2.11977L6.9 9.01527L0 15.9093L2.121 18.0303L11.1375 9.01527Z" />
+                                                </svg>
                                             </a>
                                         </li>
                                     </ul>
